[package]
name = "rustranslate"
version = "0.1.0"
edition = "2021"
authors = ['d3vboi']

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0" }
